apps/podinfo/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo
spec:
  parentRefs:
    - name: shared-gateway
      namespace: istio-system
  hostnames:
    - podinfo.k8s.pez.sh
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
